--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 NAME_PREFIX=mrc-ide
 GITHUB_URL=https://github.com/mrc-ide/mrc-ide-vault
-SERVER_URL=https://web-dev.dide.ic.ac.uk:8200
+SERVER_URL=https://vault.dide.ic.ac.uk:8200
 GITHUB_ORG=mrc-ide
 GITHUB_TEAM_ADMIN=admin
 KEY_OWNERS="Martin Wes Alex James Rich"
