Change tls mount point

--- a/vault.conf
+++ b/vault.conf
@@ -6,6 +6,6 @@ storage "file" {
 
 listener "tcp" {
     address = "0.0.0.0:8200"
-    tls_cert_file = "/vault/config/tls/certificate.pem"
-    tls_key_file = "/vault/config/tls/key.pem"
+    tls_cert_file = "/vault/tls/certificate.pem"
+    tls_key_file = "/vault/tls/key.pem"
 }
